<resources>
    <string name="app_name">Why</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="google_maps_api_key">AIzaSyDOxq8kceDn-c6SJleULeAorHao2wAi2pA</string>
    <string name="simulate_event">Manually Trigger Event</string>
    <string name="bluetooth_devices">Bluetooth connection</string>

    <string name="ContextDrawer">Context monitor</string>
    <string name="EventsDrawer">Events</string>
    <string name="DevicesDrawer">Devices</string>
    <string name="SummaryDrawer">Summary Report</string>
    <string name="SettingsDrawer">Settings</string>
    <string name="HelpDrawer">Help</string>
    <string name="AboutDrawer">About</string>
    <string name="EmptyMessage">Screen yet to be implemented.</string>
    <string name="SuccessfulConnection">Successfully connected to VitalJacket</string>
    <string name="NoConnection">Error connecting to VitalJacket</string>
    <string name="eventOn_tv">Event on</string>
    <string name="eventDate_tv">Date</string>
    <string name="duration_tv">Duration:</string>
    <string name="heartRate_tv">Heart Rate:</string>
    <string name="cameras_tv">Cameras</string>
    <string name="notes_bt">ADD NOTES</string>
    <string name="SuccessDisc">Disconnected from VitalJacket</string>
    <string name="NoDisc">Error disconnecting from VitalJacket</string>
    <string name="AlertTitle">Bluetooth connectivity</string>
    <string name="AlertText">Please enable Bluetooth and pair the VitalJacket in your device\'s Settings.</string>
    <string name="ConnectingString">Connecting...</string>
    <string name="RecordString">Recording event...</string>
    <string name="StopEventString">Event stopped</string>
    <string name="NotesString_tv">Notes:</string>
    <string name="cancel_bt">Back</string>
    <string name="add_bt">Save</string>
    <string name="eventNotes_tv">Event Notes</string>
    <string name="weekday_tv">Weekday</string>
    <string name="date_tv">Date</string>
    <string name="address_tv">Address</string>
    <string name="moreContext_bt">MORE CONTEXT</string>
    <string name="addNotes_bt">ADD NOTES</string>
    <string name="notes_tv">notes</string>
    <string name="instantaneous_message">Instant event recorded</string>
    <string name="about">About Convertey</string>
    <string name="developersString"><b>Development</b>: Susana Sousa, Daniel Rodrigues | CMEB, MIB, FEUP</string>
    <string name="placesString">From Porto with francesinhas, 2017</string>
    <string name="iconString"><b>Icon</b>: Adapted from <a href="http://www.freepik.com">Freepik</a>, <i>CC-BY-3.0</i></string>
    <string name="libString"><b>Background photo capture:</b> <a href="https://github.com/botyourbusiness/android-camera2-secret-picture-taker">AC2SPT</a> by <i>hzitoun</i></string>
    <string name="descriptionString">A physiology-triggered multi-modal context monitor</string>
    <string name="emptyMessage">No events yet! GO to Context Monitor to record events</string>
    <string name="notesHintString">Event notes</string>
</resources>