<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/iconGroup">
        <item
            android:id="@+id/context_nav"
            android:icon="@drawable/ic_remove_red_eye_black_24dp"
            android:iconTint="@color/darkGrey"
            android:title="@string/ContextDrawer" />
        <item
            android:id="@+id/events_nav"
            android:icon="@drawable/ic_view_list_black_24dp"
            android:iconTint="@color/darkGrey"
            android:title="@string/EventsDrawer" />
        <item
            android:id="@+id/devices_nav"
            android:icon="@drawable/ic_bluetooth_audio_black_24dp"
            android:iconTint="@color/darkGrey"
            android:title="@string/DevicesDrawer" />
        <item
            android:id="@+id/report_nav"
            android:icon="@drawable/ic_menu_manage"
            android:iconTint="@color/darkGrey"
            android:title="@string/SummaryDrawer" />
        <item
            android:id="@+id/settings_nav"
            android:icon="@drawable/ic_settings_black_24dp"
            android:iconTint="@color/darkGrey"
            android:title="@string/SettingsDrawer" />

    </group>

    <group
        android:id="@+id/iconlessgroup">
        <item
            android:id="@+id/help_nav"
            android:title="@string/HelpDrawer" />
        <item
            android:id="@+id/about_nav"
            android:title="@string/AboutDrawer" />
    </group>

</menu>
