<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/currCard"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5sp"
    android:clickable="true"
    android:elevation="8sp"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="12sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:padding="4sp">


        <ImageView
            android:id="@+id/photo_imgv"
            android:layout_width="80sp"
            android:layout_height="200sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:padding="4sp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_flash_on_black_24dp" />

        <TextView
            android:id="@+id/weekday_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/photo_imgv"
            android:text="@string/weekday_tv"
            android:textColor="@color/lightGrey" />

        <TextView
            android:id="@+id/date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/weekday_tv"
            android:layout_toEndOf="@+id/photo_imgv"
            android:text="@string/date_tv"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/date_tv"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@+id/imageView3"
            android:text="@string/address_tv" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignTop="@+id/address_tv"
            android:layout_marginBottom="4sp"
            android:layout_toEndOf="@+id/photo_imgv"
            app:srcCompat="@drawable/ic_location_on_black_24dp" />

        <TextView
            android:id="@+id/moreContext_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/address_tv"
            android:layout_toEndOf="@+id/photo_imgv"
            android:clickable="true"
            android:layout_marginTop="6sp"
            android:padding="10dp"
            android:text="@string/moreContext_bt"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/addNotes_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/moreContext_bt"
            android:layout_alignBottom="@+id/moreContext_bt"
            android:layout_marginLeft="20sp"
            android:layout_toEndOf="@+id/moreContext_bt"
            android:clickable="true"
            android:padding="8dp"
            android:text="@string/addNotes_bt"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>
</android.support.v7.widget.CardView>