<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="24sp"
    android:orientation="vertical"
    android:padding="24sp">>

    <TextView
        android:id="@+id/eventNotes_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/eventNotes_tv"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:inputType="textNoSuggestions"
        android:lines="3"
        android:maxLines="4"
        android:minLines="2"
        android:textColor="@color/lightGrey">

    </EditText>

    <Button
        android:id="@+id/cancel_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/notes"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:padding="8sp"
        android:text="@string/cancel_bt"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/add_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cancel_bt"
        android:layout_alignBottom="@+id/cancel_bt"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:padding="8sp"
        android:text="@string/add_bt"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="normal" />

</RelativeLayout>