<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4sp">

        <ImageView
            android:id="@+id/alert_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="#C62828"
            app:srcCompat="?android:attr/alertDialogIcon" />

        <TextView
            android:id="@+id/eventOn_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4sp">

        <ImageView
            android:id="@+id/duration_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/lightGrey"
            app:srcCompat="@drawable/ic_access_time_black_24dp" />


        <TextView
            android:id="@+id/duration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration_tv"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/setDuration_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="Duration"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4sp">

        <ImageView
            android:id="@+id/heart_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/lightGrey"
            app:srcCompat="@drawable/ic_favorite_black_24dp" />

        <TextView
            android:id="@+id/heartRate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/heartRate_tv"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/setHearRate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="HR value"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4sp">
    <View android:background="#ffbdbdbd"
        android:layout_width = "match_parent"
        android:layout_height="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="4sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/camerafront_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/lightGrey"
            app:srcCompat="@drawable/ic_camera_front_black_24dp" />

        <ImageView
            android:id="@+id/camerarear_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/lightGrey"
            app:srcCompat="@drawable/ic_camera_rear_black_24dp" />

        <TextView
            android:id="@+id/cameras_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cameras_tv"
            android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:padding="4sp">

            <ImageView
                android:id="@+id/front_start"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_weight="1"
                android:padding="4sp"
                android:scaleType="fitXY"/>

            <ImageView
                android:id="@+id/rear_start"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:layout_weight="1"
                android:padding="4sp"
                android:scaleType="fitXY" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4sp">
        <View android:background="#ffbdbdbd"
            android:layout_width = "match_parent"
            android:layout_height="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8sp">
        <ImageView
            android:id="@+id/notes_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/lightGrey"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_edit_black_24dp" />

        <TextView
            android:id="@+id/notes_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/NotesString_tv"
            android:layout_gravity="center_vertical"/>

        <TextView
            android:id="@+id/notesContent_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Event notes"
            android:layout_gravity="center_vertical"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:inputType="textMultiLine"/>
    </LinearLayout>


    <Button style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:id="@+id/notes_btn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:text="@string/notes_bt"/>

</LinearLayout>